--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -8,10 +8,7 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: "milvus"
-
-  # An https to a valid Helm repository to download the chart from
-  repo: "oci://dp.apps.rancher.io/charts"
+  chart: "oci://dp.apps.rancher.io/charts/milvus"
 
   # Used if repo is set to look up the version of the chart
   version: "4.2.2"
