--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -23,3 +23,9 @@ helm:
   # Path to any values files that need to be passed to helm during install.
   valuesFiles:
     - milvus_custom_overrides.yaml
+  
+  # Allow to use values files from configmaps or secrets defined in the
+  # downstream clusters.
+  valuesFrom:
+    - secretKeyRef:
+        name: application-collection
