--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -24,8 +24,14 @@ helm:
   valuesFiles:
     - milvus_custom_overrides.yaml
   
-  # Allow to use values files from configmaps or secrets defined in the
-  # downstream clusters.
-  valuesFrom:
-    - secretKeyRef:
-        name: application-collection
+  # If fleet.yaml contains a private Helm repo that requires authentication,
+  # provide the credentials in a K8s secret and specify them here.
+  # Danger: the credentials will be sent to all repositories referenced from
+  # this gitrepo. See section below for more information.
+  #
+  helmSecretName: application-collection
+
+  # Helm credentials from helmSecretName will be used if the helm repository url matches this regular expression.
+  # Credentials will always be used if it is empty or not provided
+  #
+  helmRepoURLRegex: oci://dp.apps.rancher.io/*
