--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,8 +1,7 @@
 defaultNamespace: default
 helm:
   releaseName: milvus
-  chart: milvus
-  repo: oci://dp.apps.rancher.io/charts
+  chart: oci://dp.apps.rancher.io/charts
   version: 4.2.2
     
   # Path to any values files that need to be passed to helm during install.
