--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,4 +1,7 @@
 defaultNamespace: default
+global:
+  imagePullSecrets:
+  - application-collection
 helm:
   releaseName: milvus
   chart: oci://dp.apps.rancher.io/charts/milvus
