--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -3,6 +3,8 @@ helm:
   releaseName: milvus
   chart: oci://dp.apps.rancher.io/charts/milvus
   helmSecretName: basic-auth-secret
+  imagePullSecrets:
+    - name: application-collection
   version: 4.2.2
     
   # Path to any values files that need to be passed to helm during install.
