--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,12 +1,11 @@
 defaultNamespace: default
 helm:
   releaseName: milvus
-  chart: oci://dp.apps.rancher.io/charts/milvus
+  chart: oci://dp.apps.rancher.io/charts
   helmSecretName: basic-auth-secret
+  version: 4.2.2
   ociRegistry:
     authSecretName: application-collection
-    insecureSkipTLS: true
-  version: 4.2.2
     
   # Path to any values files that need to be passed to helm during install.
   valuesFiles:
