--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,7 +1,6 @@
-defaultNamespace: fleet-local
 helm:
   chart: oci://dp.apps.rancher.io/charts/milvus
-  # helmSecretName: basic-auth-secret
+  helmSecretName: basic-auth-secret
   version: 4.2.2
   ociRegistry:
     authSecretName: application-collection
