--- a/suseai/owui/fleet.yaml
+++ b/suseai/owui/fleet.yaml
@@ -1,7 +1,4 @@
 # This file and all contents in it are OPTIONAL.
-
-namespace: fleet-local
-
 # Custom helm options
 helm:
   # The release name to use. If empty a generated release name will be used
@@ -33,4 +30,4 @@ helm:
 
   # Path to any values files that need to be passed to helm during install.
   valuesFiles:
-    - milvus_custom_overrides.yaml
+    - owui_custom_overrides.yaml
