--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -6,5 +6,5 @@ helm:
     authSecretName: application-collection
     
   # Path to any values files that need to be passed to helm during install.
-  valuesFiles:
-    - milvus_custom_overrides.yaml
+  # valuesFiles:
+  #   - milvus_custom_overrides.yaml
