--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,10 +1,33 @@
+# This file and all contents in it are OPTIONAL.
+# Custom helm options
 helm:
-  chart: oci://dp.apps.rancher.io/charts/milvus
+  # The release name to use. If empty a generated release name will be used
+  releaseName: milvus
+
   helmSecretName: basic-auth-secret
-  version: 4.2.2
-  ociRegistry:
-    authSecretName: application-collection
+
+  # The directory of the chart in the repo.  Also any valid go-getter supported
+  # URL can be used there is specify where to download the chart from.
+  # If repo below is set this value if the chart name in the repo
+  chart: ""
+
+  # An https to a valid Helm repository to download the chart from
+  repo: ""
+
+  # Used if repo is set to look up the version of the chart
+  version: ""
+
+  # Force recreate resource that can not be updated
+  force: false
+
+  # How long for helm to wait for the release to be active. If the value
+  # is less that or equal to zero, we will not wait in Helm
+  timeoutSeconds: 0
+
+  # Custom values that will be passed as values.yaml to the installation
+  values:
+    replicas: 1
     
   # Path to any values files that need to be passed to helm during install.
-  # valuesFiles:
-  #   - milvus_custom_overrides.yaml
+  valuesFiles:
+    - milvus_custom_overrides.yaml
