--- a/suseai/owui/fleet.yaml
+++ b/suseai/owui/fleet.yaml
@@ -9,13 +9,13 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: ""
+  chart:  ""
 
   # An https to a valid Helm repository to download the chart from
-  repo: ""
+  repo: "oci://dp.apps.rancher.io/charts/owui"
 
   # Used if repo is set to look up the version of the chart
-  version: ""
+  version: "5.16.0"
 
   # Force recreate resource that can not be updated
   force: false
