--- a/suseai/owui/owui_custom_overrides.yaml
+++ b/suseai/owui/owui_custom_overrides.yaml
@@ -1,6 +1,7 @@
 global:
   imagePullSecrets:
   - application-collection
+  namespace: suseai
 image:
   registry: dp.apps.rancher.io
   repository: containers/open-webui
