--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,4 +1,5 @@
 helm:
+  chart: .
   # Path to any values files that need to be passed to helm during install.
   valuesFiles:
     - milvus_custom_overrides.yaml
