--- a/suseai/owui/fleet.yaml
+++ b/suseai/owui/fleet.yaml
@@ -1,4 +1,5 @@
 helm:
+  chart: .
   # Path to any values files that need to be passed to helm during install.
   valuesFiles:
     - owui_custom_overrides.yaml
