--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,4 +1,8 @@
 helm:
-  # Path to any values files that need to be passed to helm during install.
-  valuesFiles:
+   repo: oci://dp.apps.rancher.io/charts/milvus
+   chart: milvus
+   version: 4.2.2 # Replace with the version you'd like to install or upgrade to
+   releaseName: milvus
+    # Path to any values files that need to be passed to helm during install.
+   valuesFiles:
     - milvus_custom_overrides.yaml
