--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,6 +1,5 @@
 helm:
-   repo: oci://dp.apps.rancher.io/charts/milvus
-   chart: milvus
+   chart: oci://dp.apps.rancher.io/charts/milvus
    version: 4.2.2 # Replace with the version you'd like to install or upgrade to
    releaseName: milvus
     # Path to any values files that need to be passed to helm during install.
