--- a/suseai/milvus/fleet.yaml
+++ b/suseai/milvus/fleet.yaml
@@ -1,5 +1,5 @@
 helm:
-   chart: oci://dp.apps.rancher.io/charts/milvus
+   chart: ""
    version: 4.2.2 # Replace with the version you'd like to install or upgrade to
    releaseName: milvus
     # Path to any values files that need to be passed to helm during install.
