--- a/nv/fleet.yaml
+++ b/nv/fleet.yaml
@@ -38,38 +38,38 @@ helm:
       replicaCount: 1
       persistence:
         storageClassName: local-path
-    minio:
-      mode: standalone
-      replicas: 1
-      rootUser: "admin"
-      rootPassword: "adminminio"
-      persistence:
-        storageClass: local-path
-      resources:
-        requests:
-          memory: 1024Mi
-    kafka:
-      enabled: true
-      name: kafka
-      replicaCount: 1
-      broker:
-        enabled: true
-      cluster:
-        listeners:
-          client:
-            protocol: 'PLAINTEXT'
-          controller:
-            protocol: 'PLAINTEXT'
-      persistence:
-        enabled: true
-        annotations: {}
-        labels: {}
-        existingClaim: ""
-        accessModes:
-          - ReadWriteOnce
-        resources:
-          requests:
-            storage: 8Gi
-        storageClassName: "local-path"
+    # minio:
+    #   mode: standalone
+    #   replicas: 1
+    #   rootUser: "admin"
+    #   rootPassword: "adminminio"
+    #   persistence:
+    #     storageClass: local-path
+    #   resources:
+    #     requests:
+    #       memory: 1024Mi
+    # kafka:
+    #   enabled: true
+    #   name: kafka
+    #   replicaCount: 1
+    #   broker:
+    #     enabled: true
+    #   cluster:
+    #     listeners:
+    #       client:
+    #         protocol: 'PLAINTEXT'
+    #       controller:
+    #         protocol: 'PLAINTEXT'
+    #   persistence:
+    #     enabled: true
+    #     annotations: {}
+    #     labels: {}
+    #     existingClaim: ""
+    #     accessModes:
+    #       - ReadWriteOnce
+    #     resources:
+    #       requests:
+    #         storage: 8Gi
+    #     storageClassName: "local-path"
 
       
