--- a/nv/fleet.yaml
+++ b/nv/fleet.yaml
@@ -11,7 +11,7 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: "oci://dp.apps.rancher.io/charts/minio"
+  chart: "oci://dp.apps.rancher.io/charts/milvus"
 
   # An https to a valid Helm repository to download the chart from
   # repo: ""
@@ -27,49 +27,50 @@ helm:
   timeoutSeconds: 0
 
   # Custom values that will be passed as values.yaml to the installation
-  # values: 
-    # cluster:
-    #   enabled: True
-    # standalone:
-    #   persistence:
-    #     persistentVolumeClaim:
-    #       storageClass: local-path
-    # etcd:
-    #   replicaCount: 1
-    #   persistence:
-    #     storageClassName: local-path
-    # minio:
-    #   mode: standalone
-    #   replicas: 1
-    #   rootUser: "admin"
-    #   rootPassword: "adminminio"
-    #   persistence:
-    #     storageClass: local-path
-    #   resources:
-    #     requests:
-    #       memory: 1024Mi
-    # kafka:
-    #   enabled: true
-    #   name: kafka
-    #   replicaCount: 1
-    #   broker:
-    #     enabled: true
-    #   cluster:
-    #     listeners:
-    #       client:
-    #         protocol: 'PLAINTEXT'
-    #       controller:
-    #         protocol: 'PLAINTEXT'
-    #   persistence:
-    #     enabled: true
-    #     annotations: {}
-    #     labels: {}
-    #     existingClaim: ""
-    #     accessModes:
-    #       - ReadWriteOnce
-    #     resources:
-    #       requests:
-    #         storage: 8Gi
-    #     storageClassName: "local-path"
-
-      
+  values: 
+   global:
+  imagePullSecrets:
+  - application-collection
+  cluster:
+    enabled: False
+  standalone:
+    persistence:
+      persistentVolumeClaim:
+        storageClass: local-path
+  etcd:
+    replicaCount: 1
+    persistence:
+      storageClassName: local-path
+  minio:
+    mode: standalone
+    replicas: 1
+    rootUser: "admin"
+    rootPassword: "adminminio"
+    persistence:
+      storageClass: local-path
+    resources:
+      requests:
+        memory: 1024Mi
+  kafka:
+    enabled: true
+    name: kafka
+    replicaCount: 1
+    broker:
+      enabled: true
+    cluster:
+      listeners:
+        client:
+          protocol: 'PLAINTEXT'
+        controller:
+          protocol: 'PLAINTEXT'
+    persistence:
+      enabled: true
+      annotations: {}
+      labels: {}
+      existingClaim: ""
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 8Gi
+      storageClassName: "local-path"
