--- a/nv/owui/fleet.yaml
+++ b/nv/owui/fleet.yaml
@@ -11,13 +11,13 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: "oci://dp.apps.rancher.io/charts/milvus"
+  chart: "oci://dp.apps.rancher.io/charts/open-webui"
 
   # An https to a valid Helm repository to download the chart from
   # repo: ""
 
   # Used if repo is set to look up the version of the chart
-  version: "4.2.2"
+  version: "5.16.0"
 
   # Force recreate resource that can not be updated
   force: false
@@ -30,7 +30,7 @@ helm:
     replicas: 1
   
   valuesFiles:
-    - values.yaml
+    - owui-values.yaml
   
   dependsOn:
     - milvus
