--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -46,7 +46,21 @@ ingress:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
   host: ollama
   tls: true
+service:
+  type: NodePort
+  annotations: {}
+  port: 80
+  containerPort: 8080
+  nodePort: 32000
+  labels: {}
+  loadBalancerClass: ""
+# -- OpenAI base API URL to use. Defaults to the Pipelines service endpoint when Pipelines are enabled, and "https://api.openai.com/v1" if Pipelines are not enabled and this value is blank
+openaiBaseApiUrl: ""
+# -- Env vars added to the Open WebUI deployment. Most up-to-date environment variables can be found here: https://docs.openwebui.com/getting-started/env-configuration/
 extraEnvVars:
+  # -- Default API key value for Pipelines. Should be updated in a production deployment, or be changed to the required API key if not using Pipelines
+- name: OPENAI_API_KEY
+  value: "0p3n-w3bu!"
 - name: DEFAULT_MODELS
   value: "llama3.2"
 - name: DEFAULT_USER_ROLE
