--- a/nv/owui/owui-values.yaml
+++ b/nv/owui/owui-values.yaml
@@ -34,7 +34,7 @@ ollama:
       enabled: true
       storageClass: local-path
 pipelines:
-  enabled: true
+  enabled: false
   persistence:
     storageClass: local-path
 tika:
