--- a/assistant/helm/charts/nemollm-embedding/values.yaml
+++ b/assistant/helm/charts/nemollm-embedding/values.yaml
@@ -53,9 +53,9 @@ applicationSpecs:
         ports:
         - containerPort: 8000
           name: http
-        resources:
-          limits:
-            nvidia.com/gpu: 1
+        # resources:
+        #   limits:
+        #     nvidia.com/gpu: 1
     securityContext:
       runAsGroup: 1000
       runAsUser: 1000
