--- a/assistant/helm/charts/ranking-ms/values.yaml
+++ b/assistant/helm/charts/ranking-ms/values.yaml
@@ -52,9 +52,9 @@ applicationSpecs:
         ports:
         - containerPort: 8000
           name: http
-        resources:
-          limits:
-            nvidia.com/gpu: 2
+        # resources:
+        #   limits:
+        #     nvidia.com/gpu: 2
     securityContext:
       runAsGroup: 1000
       runAsUser: 1000
