--- a/assistant/helm/charts/agent-services/values.yaml
+++ b/assistant/helm/charts/agent-services/values.yaml
@@ -45,7 +45,7 @@ applicationSpecs:
         - name: EXAMPLE_PATH
           value: ./src/agent
         - name: APP_LLM_MODELNAME
-          value: meta/llama-3.1-70b-instruct
+          value: meta/llama-3-8b-instruct
         - name: APP_LLM_MODELENGINE
           value: nvidia-ai-endpoints
         - name: APP_LLM_SERVERURL
