--- a/assistant/helm/charts/nemollm-embedding/values.yaml
+++ b/assistant/helm/charts/nemollm-embedding/values.yaml
@@ -20,7 +20,7 @@ applicationSpecs:
       embedding-container:
         env:
         - name: NGC_API_KEY
-          value: ""
+          value: "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"
         image:
           repository: nvcr.io/nim/nvidia/llama-3.2-nv-embedqa-1b-v2
           tag: 1.3.0
